[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
dirs = "5.0.1"
lazy_static = "1.5.0"
path-absolutize = "3.1.1"
regex = "1.10.5"
sha = "1.0.3"
swc_common = { version = "0.34.3", features = ["tty-emitter"] }
swc_ecma_codegen = "0.151.0"
swc_ecma_parser = "0.146.3"
swc_ecma_transforms_base = "0.140.0"
swc_ecma_transforms_typescript = "0.191.0"
swc_ecma_transforms_react = "0.186.1"
swc_ecma_visit = "0.101.0"
swc_bundler = "0.230.1"
swc_ecma_ast = "0.115.1"
swc_ecma_loader = "0.46.0"
swc_atoms = "0.6.5"
ureq = "2.10.0"
url = { version = "2.5.2", features = ["serde"] }
v8 = { version = "0.101.0", default-features = false }
serde_json = { workspace = true }
