[package]
name = "dino-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dino-macros = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

anyhow = "1.0.86"
arc-swap = "1.7.1"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
matchit = "0.7.3"
serde_yml = "0.0.11"
indexmap = { version = "2.3.0", features = ["serde"] }
thiserror = "1.0.63"
dashmap = "6.0.1"
rquickjs = { version = "0.6.2", features = ["full"] }
rquickjs-macro = "0.6.2"
typed-builder = "0.19.1"
# uuid 使用v7版本，相比于v4乱序生成，v7生层的uuid是有序的，可以方便追踪调试
uuid = { version = "1.8.0", features = ["v7", "serde"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "fs", "cors", "trace"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
