[package]
name = "dino"
version = "0.1.0"
edition = "2021"

[dependencies]
dino-server = { workspace = true }
bundler = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = "1.0.86"
askama = "0.12.1"
blake3 = "1.5.3"
clap = { version = "4.5.13", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["completion", "fuzzy-matcher", "fuzzy-select", "history"] }
enum_dispatch = "0.3.13"
git2 = { version = "0.19.0", default-features = false }
glob = "0.3.1"
